# archive

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  README.rst  linked_list.h  list_iterator.h  max_element1.h  max_element3.h
.vim/: abbreviations.vim
SimpleChess/: .clang_complete
SimpleChess/src/gui/: CMakeLists.txt  ChessBoardUi.hpp  DrawVisitor.hpp  resources.qrc
SimpleChess/src/libchess/: CMakeLists.txt  ChessBoard.cpp  ChessBoard.hpp
SimpleChess/src/libchess/pieces/: Bishop.cpp  King.cpp  King.hpp  Knight.cpp  Pawn.cpp  Queen.cpp  Queen.hpp  Rook.hpp
SimpleChess/src/tests/: chess_test.cpp
iterators-source/: list_node.h  main.cpp  max_element2.h  max_element4.h
libahc/: CMakeLists.txt
libahc/src/: fgk.cpp  node.cpp
libahc/tools/: CMakeLists.txt  core.cpp  core.hpp
mentat/: ChangeLog.md  mentat.cabal
mentat/src/: Mentat.hs
mentat/src/Vcs/: Base.hs  Common.hs  Hg.hs
src/: CMakeLists.txt  fgk.hpp  node.hpp
src/Vcs/: Git.hs
src/gui/: ChessBoardUi.cpp  DrawVisitor.cpp  main.cpp
src/libchess/: ChessPiece.cpp  ChessPiece.hpp  Visitor.hpp  common.hpp
src/libchess/pieces/: Bishop.hpp  Knight.hpp  Pawn.hpp  Rook.cpp
src/tests/: CMakeLists.txt
tests/: main.cpp
tools/: compress.cpp  decompress.cpp
vim-config/: .gitignore  .vimrc
vim-config/.vim/: functions.vim
